[tool.poetry]
name = "project-tab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_tab"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.7"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
